# og-agents

./: .env.example  .gitignore  pyproject.toml
src/: oops.py
src/og_agents/: __main__.py
src/og_agents/app/: 1_Chat.py  ontology_visualization.py
src/og_agents/app/pages/: 2_Ontology.py  3_Workflow_Visualization.py
src/og_agents/common/http_client/: __init__.py  http_client.py  requests_http_client.py
src/og_agents/config/: __init__.py  app_config.py  database_config.py
src/og_agents/documents/: __init__.py  example_text.txt  ontology_source_document.py
src/og_agents/embeddings/: __init__.py  embeddings_model.py  open_ai_embeddings_model.py
src/og_agents/language_models/: __init__.py  hugging_face_language_model.py  language_model.py  open_ai_language_model.py
src/og_agents/ontology/: __init__.py  competency_question.py  competency_questions.py  ontology_file_manager.py  ontology_storage.py
src/og_agents/ontology/validators/: __init__.py  base_ontology_validator.py  ontology_consistency_validation_result.py  ontology_consistency_validator.py  ontology_rdf_syntax_validation_result.py  ontology_rdf_syntax_validator.py  ontology_validation_result.py  rdf_ontology_validator.py
src/og_agents/prompts/: __init__.py  generate_competency_questions_prompt.py  generate_ontology_prompt.py  ontology_consistency_validation_result_prompt.py  ontology_rdf_syntax_validation_result_prompt.py  oops_validation_result_prompt.py  sparql_prompts.py
src/og_agents/state/: __init__.py  generation_state.py
src/og_agents/state/reducers/: __init__.py  update_documents.py
src/og_agents/workflows/: __init__.py  ontology_generation_workflow_builder.py  workflow_context.py
(+17 files in other folders)
